tests/rascal/negative/type_errors/L1/16_expression_ES10_D4_19.ob
MODULE Test16;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               x := ((((+ z) - (- x)) MOD (+ (1 * x))) MOD (+ ((- y) - (200 + x))));
               p := ((((+ x) + (1 + 200)) - ((y * x) * (- 1223))) < ((+ (z MOD 1)) * ((1223 - 1223) MOD (x * 200))));
               z := (((+ (1 + 1223)) + ((+ z) - (2 DIV 1223))) DIV (- ((- 1223) - (- 1223))));
               z := ((((1223 * 1) + (+ 200)) + (+ (- 200))) - (((0 MOD 2) + (0 * y)) MOD ((1223 MOD 1) * (+ 2))));
               q := ((+ ((2 - z) * (+ 1))) >= (((2 * x) MOD (200 MOD 200)) * (+ (- 2))));
  (* error *)  y := ((((r MOD 1) + (+ y)) + ((x MOD z) DIV (z - 1223))) DIV (+ (+ (200 * 1223))));
               q := ((- ((0 MOD 2) MOD (y MOD 1))) = (((+ 200) + (1 - 1223)) + (+ (1223 MOD 200))));
               y := (- (((0 - 1) * (z DIV 2)) * (- (1 * x))));
               p := ((+ (+ (x * y))) = (- ((1223 + x) DIV (z * 2))));
               x := ((((1223 + 0) + (200 MOD 200)) MOD ((1 * z) - (1223 - y))) + (((- 2) + (2 * 2)) MOD (- (0 - 1223))))
END Test16.